<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_devicepage"
            android:icon="@drawable/ic_page"
            android:title="@string/menu_devicepage" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_graph"
            android:title="@string/menu_graphviewer" />
    </group>
</menu>