<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:padding="@dimen/border_margin">

    <TextView
        android:id="@+id/permission_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Permission Details"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/file_permission_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/permission_title"
        android:layout_marginTop="@dimen/border_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/file_permission_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="File Permission"
                android:textSize="@dimen/text_subtitle" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/file_permission_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Denied"
                android:textAllCaps="true"
                android:textColor="@color/colorError"
                android:textSize="@dimen/text_subtitle" />
        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/inner_margin">

            <TextView
                android:id="@+id/file_permission_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/inner_margin"
                android:layout_toStartOf="@id/file_permission_button"
                android:text="@string/file_permission"
                android:textSize="@dimen/text_content2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/file_permission_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="Grant" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bluetooth_permission_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/file_permission_group"
        android:layout_marginTop="@dimen/border_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bluetooth_permission_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bluetooth Permission"
                android:textSize="@dimen/text_subtitle" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/bluetooth_permission_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Denied"
                android:textAllCaps="true"
                android:textColor="@color/colorError"
                android:textSize="@dimen/text_subtitle" />
        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/inner_margin">

            <TextView
                android:id="@+id/bluetooth_permission_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/inner_margin"
                android:layout_toStartOf="@id/bluetooth_permission_button"
                android:text="@string/bluetooth_permission"
                android:textSize="@dimen/text_content2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bluetooth_permission_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="Grant" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_permission_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/bluetooth_permission_group"
        android:layout_marginTop="@dimen/border_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_permission_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location Permission"
                android:textSize="@dimen/text_subtitle" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/location_permission_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Denied"
                android:textAllCaps="true"
                android:textColor="@color/colorError"
                android:textSize="@dimen/text_subtitle" />
        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/inner_margin">

            <TextView
                android:id="@+id/location_permission_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/location_permission_button"
                android:layout_marginEnd="@dimen/inner_margin"
                android:text="@string/location_permission"
                android:textSize="@dimen/text_content2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/location_permission_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="Grant" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>